# sasya-arogya-engine

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CONTRIBUTING.md  DEPLOYMENT.md  INSURANCE_ARCHITECTURE.md  INSURANCE_SYSTEM_CHANGES.md  OBSERVABILITY_QUICK_START.md  README.md  TECHNICAL_ARCHITECTURE.md  TEST_README.md  k8s-periodic-tests.yaml  main.py  manual_test_llm_next_steps.py  pyproject.toml  requirements.txt  run_periodic_tests.sh  setup.sh  setup_test_images.sh  test_api.sh  test_architectural_fix.py  test_dependency_fix.sh  test_engine_periodic.py  test_enhanced_metrics.py  test_error_state_clearing.py  test_insurance_integration.py  test_intent_analysis_classification_fix.py  test_llm_contextual_next_steps.py  test_out_of_scope_handling.py  test_requirements.txt  test_script_usage.sh  test_timeout_fix.py
core/: UDIT_EXPERIMENT_DOCUMENTATION.md  classification_metrics.py  mlflow_manager.py
diagrams/: INSURANCE_DIAGRAMS_FINAL.md  MCP_DIAGRAMS_SUMMARY.md  MCP_INTEGRATION_WRITEUP.md  README.md  SASYA_AROGYA_DIAGRAMS_COMPLETE.md  architecture_visualization.html  create_enterprise_diagram.py  create_professional_diagram.py  diagram_01.mmd  diagram_01_clean.mmd  diagram_01_comparison.md  diagram_01_simple.mmd  diagram_01_vertical.mmd  diagram_02.mmd  diagram_02_clean.mmd  diagram_02_comparison.md  diagram_02_core.mmd  diagram_02_horizontal.mmd  diagram_02_simple.mmd  diagram_03.mmd  diagram_04.mmd  diagram_05.mmd  diagram_06.mmd  diagram_07.mmd  diagram_08.mmd  diagram_09.mmd  diagram_10.mmd  diagram_10_fixed.mmd  diagram_descriptions.md  index.html  insurance_premium_flow.mmd  insurance_purchase_flow.mmd  langgraph_mcp_integration.mmd  mcp_integration_architecture.mmd  sasya-arogya-theme.json  serve_diagrams.py  word_integration_guide.md  workflow_visualization.html
docker/: Dockerfile.app  Dockerfile.base  Dockerfile.engine  Dockerfile.engine.optimized  README.md  RUNTIME-COMPATIBILITY.md  container-runtime-utils.sh  create-app-image.sh  create-base-image.sh  create-image-engine-optimized.sh  create-image-engine.sh  setup.sh
fsm_agent/: README.md  run_fsm_server.py  start_mlflow_server.py  test_agent_mlflow_flow.py  test_fsm_agent.py  test_mlflow_integration.py  test_mlflow_tracing.py  test_rag_metadata.py  test_refactored_workflow.py  test_server_startup.py
fsm_agent/core/: intent_analyzer.py  langgraph_workflow.py  langgraph_workflow_refactored.py  response_config.py  session_manager.py  workflow_state.py
fsm_agent/core/nodes/: base_node.py  classifying_node.py  completed_node.py  error_node.py  followup_node.py  initial_node.py  insurance_node.py  node_factory.py  order_booking_node.py  prescribing_node.py  session_end_node.py  show_vendors_node.py  vendor_query_node.py
fsm_agent/server/: fsm_server.py
fsm_agent/tools/: __init__.py  classification_tool.py  insurance_tool.py  prescription_tool.py
ml/: best_basic_self_attention_cnn_model_final.keras  cnn_attn_classifier_improved.py  cnn_with_attention_classifier.py
observability/: README.md  __init__.py  docker-compose.yml  fix-otel-versions.sh  instrumentation.py  metrics.py  otel_requirements.txt  otel_requirements_simple.txt  start-observability.sh  test-otel-setup.py  tracing.py
observability/config/: otel-collector.yml  prometheus.yml
observability/config/grafana/dashboards/: intent-analytics.json  sasya-engine-overview.json  sasya-langgraph-nodes.json  sasya-ml-performance.json  simple-langgraph-metrics.json
test/: PERIODIC_TESTING_README.md  test_engine_periodic.py
test/resources/images_for_test/: README.md
(+3 files in other folders)
